--- a/_drafts/h264裸流网页直接播放的优化.md
+++ b/_drafts/h264裸流网页直接播放的优化.md
@@ -44,3 +44,171 @@ https://www.cnblogs.com/valin/articles/3228864.html
 综上，只有 h264裸流 从理论上就做不到完美的播放。最理想的情况也只能做到类似 mpv 那样，提供一个 buffer 进度条，而非视频时间进度条，而且这样会脱离整个社区，对以后的视频相关的开发，就难以再利用社区资源了，例如用 video.js 等。
 
 其实我个人不太理解后端转换的瓶颈在哪里，目前我知道 ffmpeg 封装 h264 为 mp4 其实基本消耗不了多少 CPU/内存，主要是读写文件有一定的 IO 开销。一个 90MB 的视频，封装好，个人电脑用差不多 1s，服务器理应会更低。可以设备上传之后就立即转换，可以用户请求时在去转换这样延迟操作（只要IO够快，整体转换的时间控制在一定以内，让用户等个几秒感觉问题并不大），或者两个结合起来。另外可能考虑启动 ffmpeg 是启动进程，进程过多会影响系统，那也可以用 worker 模式解决。
+
+# H264Video.vue
+
+```vue
+<script lang="ts">
+import { defineComponent, getCurrentInstance, PropType, shallowRef, watch, onMounted, onBeforeUnmount } from '@vue/composition-api';
+
+// import VideoConverter from './h264-converter';
+// setLogger(console.log);
+
+import JMuxer from 'jmuxer';
+
+// import muxjs from 'mux.js';
+
+export default defineComponent({
+  props: {
+    src: String,
+  },
+  setup(props, ctx) {
+    const insp = getCurrentInstance()!.proxy;
+
+    // onMounted(() => {
+    //   const transmuxer = new muxjs.mp4.Transmuxer({});
+    //   // insp.vc = vc;
+    //   // ctx.expose({ vc });
+    //   watch(
+    //     () => props.src,
+    //     async (cv, _, inv) => {
+    //       // vc.reset();
+    //       if (!cv) return;
+    //       const res = await fetch(cv);
+    //       if (!res.body) return;
+    //       const reader = res.body.getReader();
+    //       reader.read().then(function processResult(result): any {
+    //         function decode(value: any) {
+    //           vc.appendRawData(value);
+    //         }
+    //         if (result.done) {
+    //           decode([]);
+    //           console.log('Video Stream is done.');
+    //           return Promise.resolve();
+    //         }
+    //         decode(result.value);
+    //         return reader.read().then(processResult);
+    //       });
+    //       // vc.play();
+    //       inv(() => {
+    //         reader.cancel();
+    //         console.log('Video Stream Request Canceled');
+    //       });
+    //     },
+    //     { immediate: true }
+    //   );
+    // });
+
+    onMounted(() => {
+      watch(
+        () => props.src,
+        async (cv, _, inv) => {
+          if (!cv) return;
+          const res = await fetch(cv);
+          if (!res.body) return;
+          const reader = res.body.getReader();
+          const jmuxer = new JMuxer({
+            node: insp.$el,
+            mode: 'video',
+            readFpsFromTrack: true,
+            onReady: () => {
+              reader.read().then(function processResult(result) {
+                // if (result.done) {
+                //   jmuxer.feed({ video: [] });
+                //   return;
+                // }
+                // jmuxer.feed({ video: result.value });
+                // reader.read().then(processResult);
+                jmuxer.feed({ video: result.value || [] });
+                !result.done && reader.read().then(processResult);
+              });
+            },
+          });
+          inv(() => {
+            jmuxer.destroy();
+            reader.cancel();
+          });
+        },
+        { immediate: true }
+      );
+    });
+
+    // 下面这个可能会清除不彻底，例如 变更 发生在 fetch 处。上面那个可能造成没清除，例如在执行到 inv 之前就再次发生了变更，这里不清楚 vue 会不会记得上一次的 inv 要立即执行。或者再下一次变更要执行两个 inv
+    // onMounted(() => {
+    //   watch(
+    //     () => props.src,
+    //     async (cv, _, inv) => {
+    //       let jmuxer: JMuxer = null!;
+    //       let reader: Awaited<ReturnType<NonNullable<Response['body']>['getReader']>> = null!;
+    //       inv(() => {
+    //         reader?.cancel();
+    //         jmuxer?.destroy();
+    //       });
+    //       if (!cv) return;
+    //       jmuxer = new JMuxer({
+    //         // debug: true,
+    //         node: insp.$el,
+    //         mode: 'video',
+    //         readFpsFromTrack: true,
+    //         onReady: async () => {
+    //           const res = await fetch(cv);
+    //           if (!res.body) return;
+    //           reader = res.body.getReader();
+    //           while (true) {
+    //             const result = await reader.read();
+    //             jmuxer.feed({ video: result.value || [] });
+    //             if (result.done) break;
+    //           }
+    //         },
+    //         // onError: (...args) => {
+    //         //   console.error(args);
+    //         // },
+    //       });
+    //     },
+    //     { immediate: true }
+    //   );
+    // });
+
+    // onMounted(() => {
+    //   const vc = new VideoConverter(insp.$el as any, 24, 1);
+    //   // insp.vc = vc;
+    //   // ctx.expose({ vc });
+    //   watch(
+    //     () => props.src,
+    //     async (cv, _, inv) => {
+    //       vc.reset();
+    //       if (!cv) return;
+    //       const res = await fetch(cv);
+    //       if (!res.body) return;
+    //       const reader = res.body.getReader();
+    //       reader.read().then(function processResult(result): any {
+    //         function decode(value: any) {
+    //           vc.appendRawData(value);
+    //         }
+    //         if (result.done) {
+    //           decode([]);
+    //           console.log('Video Stream is done.');
+    //           return Promise.resolve();
+    //         }
+    //         decode(result.value);
+    //         return reader.read().then(processResult);
+    //       });
+    //       // vc.play();
+    //       inv(() => {
+    //         reader.cancel();
+    //         console.log('Video Stream Request Canceled');
+    //       });
+    //     },
+    //     { immediate: true }
+    //   );
+    // });
+
+    return {};
+  },
+});
+</script>
+
+<template>
+  <video></video>
+</template>
+```
