--- a/_drafts/h264裸流网页直接播放的优化.md
+++ b/_drafts/h264裸流网页直接播放的优化.md
@@ -133,7 +133,7 @@ export default defineComponent({
       );
     });
 
-    // 下面这个可能会清除不彻底，例如 变更 发生在 fetch 处。上面那个可能造成没清除，例如在执行到 inv 之前就再次发生了变更，这里不清楚 vue 会不会记得上一次的 inv 要立即执行。或者再下一次变更要执行两个 inv
+    // 下面这个可能会清除不彻底，例如 变更 发生在 fetch 处。上面那个可能造成没清除，例如在执行到 inv 之前就再次发生了变更，这里不清楚 vue 会不会记得上一次的 inv 要立即执行。或者再下一次变更要执行两个 inv 。。。 可以用 abortSignal
     // onMounted(() => {
     //   watch(
     //     () => props.src,
